--- a/recipes/chickenParm.html
+++ b/recipes/chickenParm.html
@@ -7,5 +7,40 @@
 </head>
 <body>
     <h1>Chicken Parmesan</h1>
+    <img src="../img/chickenParm.jpg" alt="Chicken Parmesan" height="500" width="500">
+    <h2>Description</h2>
+    <p>Chicken Parmesan is one of the most popular dishes from Italy 
+        (other than pasta of course).  While most of the time, you 
+        may get it from Olive Garden, it is actualy a pretty simple 
+        recipe.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 skinless, boneless chicken breast halves</li>
+        <li>Salt and freshly ground pepper</li>
+        <li>2 large eggs</li>
+        <li>1 cup of panko bread crumbs (can add more if needed)</li>
+        <li>3/4 cup of grated parmesan cheese</li>
+        <li>2 table spoon of all-purpose flour</li>
+        <li>1/2 cup of olive oil for frying</li>
+        <li>1/2 cup tomato sauce</li>
+        <li>1/4 cup of mozzarella cut into cubes</li>
+        <li>1/4 cup of chopped basil</li>
+        <li>1/2 cup of grated provolone cheese</li>
+        <li>2 teaspoons of olive oil</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat oven to 450 deg F</li>
+        <li>Place chickn breasts between twi sheets of heavy plastic and firmly pound to a thickness of 1/2 in.</li>
+        <li>Season chicken thoroughly with salt and pepper. Sprinkle flour over each breast with an even coat</li>
+        <li>Beat eggs into a shallow bowl</li>
+        <li>Mix bread crumbs and 1/2 cup parmesan cheese in a separate bowl</li>
+        <li>Dip flour-coated chicken breast in the beaten eggs. Transfer the breat to bread crumb mixture pressing into both sides. 
+            Repeat for each breast. Let sit for 10 to 15 minutes.</li>
+        <li>Heat 1/2 inch olive oil in a large skillet on medium-high until it begins to simmer. Cook chicken in the oil until golden.</li>
+        <li>Transfer chicken to baking dish. Top each breast with 2 tabelspoons of tomato sauce. Layer each breast with equal amounts of mozzarella cheese
+            , fresh basil, and provolone cheese. Sprinkle remaining parmesan cheese over top and drizzle with 1/2 teaspoon of olive oil</li>
+        <li>Bake in the preheated oven until cheese is brown and bubbly and chicken breasts are not longer pink in center and enjoy!</li>    
+    </ol>
 </body>
 </html>
