Added cinnamon rolls page. Edited parm and index
Edited index to link to cinnamon roll. Fixed typos in parm

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chickenParm.html">Chicken Parmesan</a>
+        <ul>
+            <li><a href="./recipes/chickenParm.html">Chicken Parmesan</a></li>
+            <li><a href="./recipes/cinnamonRolls.html">Cinnamon Rolls</a></li>
+        </ul>   
     </body>
 </html>
