--- a/recipes/chickenParm.html
+++ b/recipes/chickenParm.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">  
     <title>Chicken Parmesan</title>
 </head>
 <body>
@@ -30,16 +29,16 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li>Preheat oven to 450 deg F</li>
+        <li>Preheat oven to 450 deg F.</li>
         <li>Place chickn breasts between twi sheets of heavy plastic and firmly pound to a thickness of 1/2 in.</li>
-        <li>Season chicken thoroughly with salt and pepper. Sprinkle flour over each breast with an even coat</li>
-        <li>Beat eggs into a shallow bowl</li>
-        <li>Mix bread crumbs and 1/2 cup parmesan cheese in a separate bowl</li>
+        <li>Season chicken thoroughly with salt and pepper. Sprinkle flour over each breast with an even coat.</li>
+        <li>Beat eggs into a shallow bowl.</li>
+        <li>Mix bread crumbs and 1/2 cup parmesan cheese in a separate bowl.</li>
         <li>Dip flour-coated chicken breast in the beaten eggs. Transfer the breat to bread crumb mixture pressing into both sides. 
             Repeat for each breast. Let sit for 10 to 15 minutes.</li>
         <li>Heat 1/2 inch olive oil in a large skillet on medium-high until it begins to simmer. Cook chicken in the oil until golden.</li>
         <li>Transfer chicken to baking dish. Top each breast with 2 tabelspoons of tomato sauce. Layer each breast with equal amounts of mozzarella cheese
-            , fresh basil, and provolone cheese. Sprinkle remaining parmesan cheese over top and drizzle with 1/2 teaspoon of olive oil</li>
+            , fresh basil, and provolone cheese. Sprinkle remaining parmesan cheese over top and drizzle with 1/2 teaspoon of olive oil.</li>
         <li>Bake in the preheated oven until cheese is brown and bubbly and chicken breasts are not longer pink in center and enjoy!</li>    
     </ol>
 </body>
